// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing type_resolved messages for file test_port_std_logic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_logic.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_logic.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (std_logic) should use unresolved type std_ulogic  (type-resolved)",
    "range": {
      "end": {
        "character": 26,
        "line": 5,
      },
      "start": {
        "character": 17,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_port_std_logic_vector.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_logic_vector.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_logic_vector.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (std_logic_vector) should use unresolved type std_ulogic_vector  (type-resolved)",
    "range": {
      "end": {
        "character": 33,
        "line": 5,
      },
      "start": {
        "character": 17,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_port_std_ulogic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_ulogic.vhd with setting resolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using unresolved type (std_ulogic) should use resolved subtype std_logic or x01 or x01z or ux01 or ux01z  (type-resolved)",
    "range": {
      "end": {
        "character": 27,
        "line": 5,
      },
      "start": {
        "character": 17,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_port_std_ulogic.vhd with setting unresolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_ulogic_vector.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_ulogic_vector.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_std_ulogic_vector.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (std_logic_vector) should use unresolved type std_ulogic_vector  (type-resolved)",
    "range": {
      "end": {
        "character": 33,
        "line": 5,
      },
      "start": {
        "character": 17,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_port_u_unsigned.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_u_unsigned.vhd with setting resolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using unresolved type (u_unsigned) should use resolved subtype unsigned  (type-resolved)",
    "range": {
      "end": {
        "character": 27,
        "line": 6,
      },
      "start": {
        "character": 17,
        "line": 6,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_port_u_unsigned.vhd with setting unresolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_unsigned.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_unsigned.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_port_unsigned.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (unsigned) should use unresolved type unresolved_unsigned or u_unsigned  (type-resolved)",
    "range": {
      "end": {
        "character": 25,
        "line": 6,
      },
      "start": {
        "character": 17,
        "line": 6,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_record_std_logic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_record_std_logic.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_record_std_logic.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (std_logic) should use unresolved type std_ulogic  (type-resolved)",
    "range": {
      "end": {
        "character": 20,
        "line": 5,
      },
      "start": {
        "character": 11,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_record_std_ulogic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_record_std_ulogic.vhd with setting resolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using unresolved type (std_ulogic) should use resolved subtype std_logic or x01 or x01z or ux01 or ux01z  (type-resolved)",
    "range": {
      "end": {
        "character": 21,
        "line": 5,
      },
      "start": {
        "character": 11,
        "line": 5,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_record_std_ulogic.vhd with setting unresolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_signal_std_logic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_signal_std_logic.vhd with setting resolved 1`] = `[]`;

exports[`testing type_resolved messages for file test_signal_std_logic.vhd with setting unresolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using resolved subtype (std_logic) should use unresolved type std_ulogic  (type-resolved)",
    "range": {
      "end": {
        "character": 32,
        "line": 7,
      },
      "start": {
        "character": 23,
        "line": 7,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_signal_std_ulogic.vhd with setting ignore 1`] = `[]`;

exports[`testing type_resolved messages for file test_signal_std_ulogic.vhd with setting resolved 1`] = `
[
  {
    "code": "0;1",
    "message": "Port is using unresolved type (std_ulogic) should use resolved subtype std_logic or x01 or x01z or ux01 or ux01z  (type-resolved)",
    "range": {
      "end": {
        "character": 33,
        "line": 7,
      },
      "start": {
        "character": 23,
        "line": 7,
      },
    },
    "severity": 3,
  },
]
`;

exports[`testing type_resolved messages for file test_signal_std_ulogic.vhd with setting unresolved 1`] = `[]`;
